--- a/control/Makefile
+++ b/control/Makefile
@@ -1,15 +1,20 @@
 .PHONY: run clean test
 VENV = venv
 PYTHON = ./$(VENV)/Scripts/python
+PYTHON_VER := $(shell python3 --version 2>&1)
 
 run: $(VENV)/Scripts/activate
 	$(PYTHON) src/serial_interface.py
 
 
 $(VENV)/Scripts/activate: requirements.txt
+ifeq ('$(PYTHON_VER)','')		
 	python -m venv $(VENV) --upgrade-deps
+else
+	python3 -m venv $(VENV)
+	$(eval PYTHON=./$(VENV)/bin/python3)
+endif
 	$(PYTHON) -m pip install -r requirements.txt
-
 
 clean:
 	rm -rf __pycache__
