--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -8,9 +8,14 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:uno]
-platform = atmelavr
-board = uno
+; [env:uno]
+; platform = atmelavr
+; board = uno
+
+[env:teensy_hid_device]
+platform = teensy
+board = teensy40
+
 framework = arduino
 monitor_speed = 115200
 ; upload_port = COM[4]
